### New Features and Improvements:
* Image Processing API and face collection are now available.

--- a/tox.ini
+++ b/tox.ini
@@ -4,40 +4,46 @@ envlist = py{27,36}-{linux,darwin}
 [testenv]
 platform = darwin: darwin
 commands = py.test \
- --cov=ricohcloudsdk tests/ -v \
+ --cov=ricohcloudsdk \
  --cov-report html:test_results/{envname}_coverage \
  --html=test_results/{envname}_report.html
 deps =
+  pillow
   requests
   mock
   pytest
   pytest-cov
   pytest-html
+  pytest-pycodestyle
 
 [testenv:py36-linux]
 platform = linux: linux
 basepython = /usr/local/lib/python3.6.2/bin/python3.6
 commands = py.test \
- --cov=ricohcloudsdk tests/ -v \
+ --cov=ricohcloudsdk \
  --cov-report html:test_results/{envname}_coverage \
  --html=test_results/{envname}_report.html
 deps =
+  pillow
   requests
   mock
   pytest
   pytest-cov
   pytest-html
+  pytest-pycodestyle
 
 [testenv:py27-linux]
 platform = linux: linux
 basepython = /usr/local/lib/python2.7.13/bin/python2.7
 commands = py.test \
- --cov=ricohcloudsdk tests/ -v \
+ --cov=ricohcloudsdk \
  --cov-report html:test_results/{envname}_coverage \
  --html=test_results/{envname}_report.html
 deps =
+  pillow
   requests
   mock
   pytest
   pytest-cov
   pytest-html
+  pytest-pycodestyle
